Improved the annotations and implementations of the processor, initialization and directory projects. Rewrote the type visitors as inner classes.